# tvit

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
debug/: vit_test.py
tests/: test_vit.py
vit/: encoder.py  head.py  patch_embedding.py  vit.py
