[tool.poetry]
name = "vit"
version = "0.1.0"
description = ""
authors = ["tocom <tcom242242@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
main = "vit.vit:main"

[tool.poetry.dependencies]
python = "^3.9"
torch = ">=2.0.0, !=2.0.1"
einops = "^0.6.1"
torchvision = "0.15.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.0"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
